2003-01-27  Pierre-Luc Paour <gallery@paour.com> (1.3-b23)

	* All and any property can be overriden by Applet parameters.

2003-01-26  Pierre-Luc Paour <gallery@paour.com> (1.3-b22)

	* Fixed slideshow causing exception on platforms capable
	  of using full-screen but where some manager decides to forbid
	  it...
	* Add pictures dialog now allows users to select whole folders
	  (thanks Terje).
	* AppletMini no longer downloads the list of albums (faster).

2003-01-23  Pierre-Luc Paour <gallery@paour.com> (1.3-b21)

	* More refactoring to improve startup sequence for the applets.
	* Slideshow applet now doesn't doawload the list of albums, which
	  was wrong in the first place because it would only show writable
	  albums.

2004-01-25  M. Scott Gartner <sgartner@pingbot.com> (1.3-b20)

    * Fixed the dates on the January 2004 entries to be 2004.
    * Fixed a NPE in CoreUtils, getListCellRendererComponent() when the
      album list has no currently selected item.
    * Changed to allow user to save state before logout.
    * Restored code in logout to clear the dirty flag (for some reason
      this code was lost in version 1.3-b19).
	* Changed to set dirty flag when a picture's order is changed (picture
      is moved).
    * Changed to set dirty flag when a picture is moved or deleted from
      the PictureInspector panel.

2004-01-22  Pierre-Luc Paour <gallery@paour.com> (1.3-b19)

	* Fixed file loading behavior: GR now logs into each Gallery
	  that it was previously logged into, and displays better
	  feedback.
	* Fixed NPEs when logging out and closing dirty but unsaved
	  files.
	* Added slideshow applet
	* More refactoring to support the new applet. The Applet code
	  is now modular and duplication-free.

2004-01-20  Pierre-Luc Paour <gallery@paour.com> (1.3-b18)

	* Fixed some threading problems in slideshow.
	* Implemented preference to download the lowrez version
	  of an image in slideshow.
	* i18n of applet.