@@ -190,8 +190,8 @@ public class UploadProgress extends JDialog implements StatusUpdate, ActionListe
 		if (level == LEVEL_UPLOAD_ONE || level == LEVEL_UPLOAD_PROGRESS) {
 			return true;
 		} else {
-			Log.log(Log.LEVEL_ERROR, MODULE, "Bad level");
-			Log.logStack(Log.LEVEL_ERROR, MODULE);
+			//Log.log(Log.LEVEL_TRACE, MODULE, "Bad level");
+			//Log.logStack(Log.LEVEL_TRACE, MODULE);
 
 			return false;
 		}
