@@ -1,6 +1,14 @@
+2003-01-29  Pierre-Luc Paour <gallery@paour.com> (1.3-b24)
+
+	* Recursive slideshows.
+	* Added protocol support for getting sub-albums as well as pictures
+	  when fetching list of pictures in an album.
+	* Fixed bugs in upload applet, which was completely broken in b23.
+
 2003-01-27  Pierre-Luc Paour <gallery@paour.com> (1.3-b23)
 
 	* All and any property can be overriden by Applet parameters.
+	* Slideshow applet now has preferences.
 
 2003-01-26  Pierre-Luc Paour <gallery@paour.com> (1.3-b22)
 
